fix: Change comments to code in index.html, add pt-3 to make title of sections How it orks and Meet our team visible on the screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
    
 }
 
-/*---------------------------------------------------------Navigation bar*/
+/*----------------------------Navigation bar-------------------------------------------*/
 
 .navbar-brand {
          font-family: "Exo", sans-serif;
@@ -37,8 +37,7 @@ body {
          border-bottom: 2px solid #e30134 !important
      }
 
-
-/*------------------------------------------------------------------------------Header*/
+/*------------------------------Header-------------------------------------------*/
 
 .header > div {
     color: #fff;
@@ -77,7 +76,7 @@ background-color: rgba(0,0,0,0.5);
 
 
 
-/*------------------------------------------------------------------------------Buttons*/
+/*---------------------------------Buttons-------------------------------------------*/
 
 .btn-danger a {
     color:white;
@@ -88,7 +87,7 @@ background-color: rgba(0,0,0,0.5);
     margin-top: 25px;
 }
 
-/*---------------------------------------------------------------Section How it works*/
+/*----------------------------------How it works---------------------------------------*/
 
 .description {
       color: white;
@@ -136,7 +135,7 @@ background-color: rgba(0,0,0,0.5);
 }
 
 
-/*----------------------------------------------------------------------Section Meet our team*/
+/*--------------------------------Team-------------------------------------*/
 
 .team {
 
@@ -160,7 +159,7 @@ background-color: rgba(0,0,0,0.5);
     color:#12151F;
 }
 
-/*---------------------------------------------------------------------Team members photos*/
+/*-------------------------------Team members photos---------------------------------------*/
 .team-items img {
      
   width:250px;
@@ -176,7 +175,7 @@ background-color: rgba(0,0,0,0.5);
 
 }
 
-/*-------------------------------------------------------------------Section Sign Up form (Book a spot for concerts)*/
+/*---------------------------------Sign Up form----------------------*/
 
 .form-section {
     background-color:#696969;
@@ -187,7 +186,7 @@ background-color: rgba(0,0,0,0.5);
 .wrapper {
     max-width: 500px;
     width: 100%;
-    background:#e30134;
+    background: rgba(0, 0, 0, 0.295);
     margin: 20px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
@@ -242,7 +241,7 @@ background-color: rgba(0,0,0,0.5);
     padding-bottom: 10px;
     font-size: 15px;
     border: 0;
-    background: #12151F;
+    background: #e30134;
     border-radius: 5px;
     cursor: pointer;
     color: white;
@@ -251,12 +250,11 @@ background-color: rgba(0,0,0,0.5);
 
 
 .wrapper .form .inputfield .btn:hover {
-    background: grey;
+    background: #e3013680;
 
 }
 
-
-/*---------------------------------------------------------------------------Footer*/
+/*----------------------------------Footer-------------------------------------------*/
 
 
 
